# RAG

./: .env  .gitignore  pyproject.toml  requirements.txt
0-Data_Ingestion_and_Preprocessing/: 1-data_ingestion.ipynb  2-dataParsingPdf.ipynb  3-Data_ingestion_docx.ipynb  4-csvExcelParsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-Data_Ingestion_and_Preprocessing/data/: sample.docx
0-Data_Ingestion_and_Preprocessing/data/databases/: company.db
0-Data_Ingestion_and_Preprocessing/data/json_files/: comppany_data.json
0-Data_Ingestion_and_Preprocessing/data/text_files/: feature_engineering.txt  model_evaluation.txt  model_training.txt  python_intro.txt
0-Data_Ingestion_and_Preprocessing/data/unstructured_files/: products.xlsx
1-vector-embeddings/: embeddings1.ipynb  embeddings2.ipynb
2-Vector stores and vector DBs/: 1-chromadb.ipynb  LCEL.ipynb
2-Vector stores and vector DBs/chroma_db/: chroma.sqlite3
2-Vector stores and vector DBs/data/: doc_0.txt  doc_2.txt
